# computerVissionProject

./: CMakeLists.txt  README.md  detection.cpp  detection.h  main.cpp  segmentation.cpp  segmentation.h
